# ITS

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
plugins/gss-bridge/: its-plugin.toml  package.json  pyproject.toml
plugins/gss-bridge/schemas/: alert.py  tlm.py
plugins/gss-bridge/src/gss_bridge/: main.py
plugins/gss-bridge/ui/: BridgesView.css  BridgesView.tsx  index.tsx
plugins/iss-feather/: its-plugin.toml  pyproject.toml
plugins/iss-feather/commands/: mshell.py
plugins/iss-feather/schemas/: alert.py  cmd_result.py  tlm.py
plugins/iss-feather/src/iss_feather/: main.py
plugins/iss-feather/tools/: feather_emulator.py
plugins/iss-live/: its-plugin.toml  package.json
plugins/iss-live/globals/: active_format.py  formats.py  idle_text.py  name_tag.py  overlay_visibility.py
plugins/iss-live/ui/: index.tsx
plugins/iss-live/ui/control/: Sidebar.tsx  VisibilityBar.tsx  globals.ts  index.tsx  ui.tsx
plugins/iss-live/ui/formats/: apply.ts  default-cassie.ts  types.ts  useFormat.ts
plugins/iss-live/ui/overlay/: CountdownTimer.tsx  NameTag.tsx  (+7 more)
plugins/its-alerts/: its-plugin.toml  package.json
plugins/its-alerts/globals/: suppression.py
plugins/its-alerts/schemas/: alert.py
plugins/its-alerts/ui/: AlertsView.css  AlertsView.tsx  index.css  index.tsx
plugins/its-command-palette/: its-plugin.toml  package.json
plugins/its-command-palette/ui/: index.tsx
plugins/its-console/: its-plugin.toml  package.json
plugins/its-console/ui/: index.css  index.tsx
plugins/its-fleet/: its-plugin.toml  package.json
plugins/its-fleet/ui/: index.css  index.tsx
plugins/its-shell/: its-plugin.toml  pyproject.toml
plugins/its-shell-watchdog/: its-plugin.toml  pyproject.toml
plugins/its-shell-watchdog/schemas/: alert.py
plugins/its-shell-watchdog/src/its_shell_watchdog/: main.py
plugins/its-shell/commands/: connect.py  disconnect.py  exec_start.py  exec_stdin.py  exec_stop.py  hardware.py  its_invoke.py  list.py  restart.py  shutdown.py
plugins/its-shell/schemas/: exec_output.py  hardware.py  heartbeat.py
plugins/its-shell/src/its_shell/: hardware.py  main.py
plugins/midas-ground/: its-plugin.toml  package.json  pyproject.toml
plugins/midas-ground/globals/: timer.py
plugins/midas-ground/schemas/: tlm.py
plugins/midas-ground/src/midas_ground/: main.py
plugins/midas-ground/ui/: CommandConsole.css  CommandConsole.tsx  CommandingView.css  CommandingView.tsx  FlightView.css  FlightView.tsx  MapView.css  MapView.tsx  TargetContext.tsx  hooks.ts  index.tsx  settings.ts  units.ts
plugins/midas-ground/ui/components/: Button.css  Button.tsx  Graph.css  Graph.tsx  MidasNav.css  MidasNav.tsx  StatusBadge.css  StatusBadge.tsx  Timer.css  Timer.tsx  ValueDisplay.css  ValueDisplay.tsx  midas.ts
(+29 files in other folders)
