[project]
name = "gss-bridge"
version = "0.1.0"
description = "MQTT-to-ITS translator for legacy GSS telemetry."
requires-python = ">=3.11"
dependencies = [
    "its-sdk-python",
    "its-core",
    "its-contracts",
    "aiomqtt>=2.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gss_bridge"]

[tool.uv.sources]
its-sdk-python = { workspace = true }
its-core = { workspace = true }
its-contracts = { workspace = true }
