[project]
name = "iss-feather"
version = "0.1.0"
description = "Native feather_duo serial telemetry intake with MShell commanding."
requires-python = ">=3.11"
dependencies = [
    "its-sdk-python",
    "its-core",
    "its-contracts",
    "pyserial>=3.5",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iss_feather"]

[tool.uv.sources]
its-sdk-python = { workspace = true }
its-core = { workspace = true }
its-contracts = { workspace = true }
