[project]
name = "its-shell-watchdog"
version = "0.1.0"
description = "Server-side watcher: fires alerts when shell stations stop heartbeating."
requires-python = ">=3.11"
dependencies = [
    "its-sdk-python",
    "its-core",
    "its-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/its_shell_watchdog"]

[tool.uv.sources]
its-sdk-python = { workspace = true }
its-core = { workspace = true }
its-contracts = { workspace = true }
