[project]
name = "its-shell"
version = "0.1.0"
description = "ITS station daemon - spawns intakes against the central server's bus."
requires-python = ">=3.11"
dependencies = [
    "its-sdk-python",
    "its-core",
    "pyserial",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/its_shell"]

[tool.uv.sources]
its-sdk-python = { workspace = true }
its-core = { workspace = true }
