[project]
name = "midas-ground"
version = "0.1.0"
description = "MIDAS ground-side relay backend: normalizes telemetry sources onto the canonical midas-ground.tlm channel."
requires-python = ">=3.11"
dependencies = [
    "its-sdk-python",
    "its-core",
    "its-contracts",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midas_ground"]

[tool.uv.sources]
its-sdk-python = { workspace = true }
its-core = { workspace = true }
its-contracts = { workspace = true }
